fix: css z-index

--- a/src/styles/components/navbar/elements/navbarCategories.scss
+++ b/src/styles/components/navbar/elements/navbarCategories.scss
@@ -1,5 +1,5 @@
 .navbar-categories {
-  @apply bg-white;
+  @apply bg-gray-100;
   .category-list {
     @apply max-w-screen-xl mx-auto flex flex-wrap items-center justify-between;
 
